# Cloud-P2P-environment

./: .gitignore  Cargo.toml  README.md  dos.rs  token.json
.history/: Cargo_20241124103115.toml  Cargo_20241124103254.toml  db_20241124103115.env  db_20241124103617.env  db_20241124103622.env  db_20241124103625.env  db_20241124103639.env  db_20241124103641.env  db_20241124103644.env  db_20241124103653.env  db_20241124112627.env  db_20241124112629.env
.history/src/: main_20241124103115.rs  main_20241124113003.rs  main_20241124113208.rs  main_20241124113209.rs  main_20241124113212.rs  main_20241124113256.rs  main_20241124113331.rs  main_20241124113402.rs  main_20241124113406.rs  main_20241124113409.rs  main_20241124113423.rs  main_20241124113716.rs
RaftPlus/: Cargo.toml
RaftPlus/src/: main.rs  node.rs
client/: Cargo.toml  run_multiple.sh
client/proto/: steganography.proto
client/remote-trait-object/src/service/: handle.rs
client/src/: image_steganographer.rs  main.rs  transport.rs
client_with_terminal/: Cargo.toml
client_with_terminal/proto/: keep_alive.proto  steganography.proto
client_with_terminal/remote-trait-object/src/: forwarder.rs
client_with_terminal/src/: dos.rs  image_steganographer.rs  main.rs  quinn_utils.rs
cloud-service-provider/: Cargo.toml
cloud-service-provider/src/: image_steganographer.rs  main.rs  service_provider.rs  transport.rs
middleware/: Cargo.toml
middleware/src/: client_middleware.rs  main.rs
service_provider/: Cargo.toml  build.rs  token.json
service_provider/proto/: port_grabber.proto  steganography.proto
service_provider/src/: cloud_leader_election.rs  image_steganographer.rs  main.rs  quinn_utils.rs  transport.rs  transport_laminar.rs
service_provider/stuff/: client_secret.json  directoryofservice-1c641ecac7f8.json  main.rs
src/: client.rs  cloud_leader_election.rs  dos.rs  image_steganographer.rs  main.rs  main2.rs  quinn_utils.rs  server.rs  transport.rs  user.rs
