[package]
name = "quin_test"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.11.5" 
quinn-proto = "0.11.5"
tokio = { version = "1.28.1", features = ["full"] }
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rcgen = "0.13"
anyhow = "1.0.22"
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1.10", default-features = false, features = ["std"] }
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2"