[package]
name = "DoS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-drive3 = "6.0.0+20240618"
yup-oauth2 = "11.0.0"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-rustls = "0.27.3"
tokio = { version = "1", features = ["full", "sync"] }
hyper-util = { version = "0.1", features = ["full"] }
rustls = { version = "0.23.18", features = ["ring"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
mime = "0.3"
lazy_static = "1.4"
