[package]
name = "cloud-service-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
image = "0.25.4"
chacha20poly1305 = "0.10.1"
async-std = "1.13.0"
crossbeam = "0.8.4"
