[package]
name = "cloud-service-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
chacha20poly1305 = "0.10.1"
async-std = "1.13.0"
crossbeam = "0.8.4"
steganography = "1.0.2"
image = "0.21.3"
rsa = "0.9.6"
remote-trait-object = "0.5.0"
parking_lot = "0.12.3"
linkme = "0.2.3"
once_cell = "1.20.2"
log = "0.4.22"
hex = "0.4.3"
env_logger = "0.11.5"
bincode = "1.3.3"
remote-trait-object-macro = "0.4.1"
